force-app/main/default/objects/Case/fields/test_case_field_2__c.field-meta.xml
<CustomField>
    <fullName>test_case_field_2__c</fullName>
    <label>test case field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>