force-app/main/default/objects/Case/fields/test_case_field__c.field-meta.xml
<CustomField>
    <fullName>test_case_field__c</fullName>
    <label>test case field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>